# openenv-chess

./: .dockerignore  .env.example  .gitignore  COMMENTARY_IMPLEMENTATION.md  COMMENTARY_LOGGING_GUIDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  chess-openenv-prd.md  chess-openenv-trd-v2-2.md  docker-compose.yml  pyproject.toml  test_commentary.py  test_commentary_variety.py  test_hybrid_agent.py  test_lichess_proof.py  test_opening_book.py  test_personality_system.py  test_tablebase.py
.github/: copilot-instructions.md
.specify/memory/: constitution.md
config/: default_agent_config.yaml
docs/: HONEST_ASSESSMENT.md  RESEARCH_IMPROVEMENTS.md  cpu-friendly-rl-approaches.md  error-handling-patterns.md  evaluation-and-prompting.md  openspiel-patterns.md  rl-self-play-implementation.md
scripts/: test_mcts_basic.py
specs/001-openenv-chess-demo/: FIXES_APPLIED.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-openenv-chess-demo/checklists/: requirements.md
specs/001-openenv-chess-demo/contracts/: rest-api.md  websocket-events.md
specs/001-phase1-quick-wins/: spec.md  tasks.md
specs/001-phase1-quick-wins/checklists/: requirements.md
src/: chess_env.py  chess_logic.py  state_manager.py
src/agents/: agent_manager.py  hybrid_agent_selector.py
src/api/: main.py  routes.py
src/commentary/: __init__.py  commentary_generator.py  commentary_strategist.py  realtime_audio_client.py  triggers.py
src/game_manager/: game_orchestrator.py
src/models/: agent.py  board_state.py  game.py  move.py  move_evaluation.py  session.py
src/utils/: api_client.py  opening_book_client.py  opening_detector.py  stockfish_evaluator.py  strategic_analyzer.py  tablebase_client.py
temp_test/: README.md  client.html  server.py
tests/: conftest.py
tests/integration/: test_full_game.py
tests/unit/: test_chess_env.py  test_chess_logic.py  test_state_manager.py
web/: app.js  index.html  styles.css
